# STM32F401CCU6_UNI

./: .gitignore  BOM.xlsx  README.md
GITIGNORE/: Записка для сборки.docx  Настройки GRBL.docx
GRBL/: Readme.md  blackpill_map.h
GRBL/Inc/: blackpill_map.h
GRBL/grbl/: STM32F401CCU6_cfg.h
GRBL_STM32F401CCU6_UNI/: .cproject  STM32F401CCUX_FLASH.ld
GRBL_STM32F401CCU6_UNI/Inc/: my_machine.h
GRBL_STM32F401CCU6_UNI/Release F401 Blackpill/: grblHAL F401 Blackpill.elf  grblHAL F401 Blackpill.hex  grblHAL F401 Blackpill.list  grblHAL F401 Blackpill.map  makefile  objects.list  sources.mk
GRBL_STM32F401CCU6_UNI/bluetooth/: COPYING  README.md  hc_05.c
GRBL_STM32F401CCU6_UNI/eeprom/: COPYING
GRBL_STM32F401CCU6_UNI/grbl/: config.h  defaults.h
GRBL_STM32F401CCU6_UNI/keypad/: COPYING  README.md  keypad.c  keypad.h
GRBL_STM32F401CCU6_UNI/laser/: COPYING  README.md  coolant.c  lb_clusters.c  ppi.c
GRBL_STM32F401CCU6_UNI/motors/: COPYING  README.md  trinamic.c  trinamic.h
GRBL_STM32F401CCU6_UNI/odometer/: COPYING  odometer.c
GRBL_STM32F401CCU6_UNI/sdcard/: COPYING  README.md  fs_fatfs.c  fs_fatfs.h  fs_littlefs.c  fs_littlefs.h  sdcard.c  sdcard.h  ymodem.c
GRBL_STM32F401CCU6_UNI/spindle/: CMakeLists.txt  COPYING  README.md  modbus.c  modbus.h  select.c  shared.h
GRBL_STM32F401CCU6_UNI/spindle/vfd/: gs20.c  h100.c  huanyang.c  modvfd.c  spindle.c  spindle.h  yl620.c
Marlin/: Readme.md  Инструкции по модификации Marlin.docx
Marlin_STM32F401CCU6_UNI_2.1.2/Marlin/: Configuration.h  Configuration_adv.h
files/: SCH_STM32F401CCU6_UNI.json
(+236 files in other folders)
